--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ biography: "I m"
 colophon: "2017 by Martín Alcubierre Arenillas.<br>Content available under <a href='http://creativecommons.org/licenses/by-nc-sa/4.0/'>Creative Commons (BY-NC-SA)</a> unless otherwise noted.<br>This site is hosted at <a href='https://pages.github.com/'>Github Pages</a> and created with <a href='http://jekyllrb.com/'>Jekyll</a>."
 
 baseurl: ""
-url: "http://hugosereno.eu"
+url: "https://m-alcu.github.io/"
 
 twitter_username: malcubierre
 github_username: m-alcu
