--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ colophon: "2017 by Martín Alcubierre Arenillas.<br>Content available under <a h
 baseurl: ""
 url: "https://m-alcu.github.io/"
 
-twitter_username: malcubierre
+twitter_username: alcubierre
 github_username: m-alcu
 linkedin_username: martinalcubierre
 facebook_username: m.alcubierre
