--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,5 @@ simple_search: http://google.com/search
 markdown: kramdown
 highlighter: rouge
 permalink: /blog/:year/:month/:day/:title/
+gems:
+  - jekyll-jupyter-notebook
