--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: "IA blog"
+title: "Statistics Maths and IA blog"
 author: "Martín Alcubierre"
-description: "This is a blog about software, some mathematics, and the occasional philosophy. Not necessarily in that order."
-keywords: "Software Engineering, Mathematics, Philosophy, Scala, Epistemology, Existentialism, Programming, Machine-Learning, Artificial Intelligence, Statistics, Probability, Puzzles"
+description: "This is a blog about software, some mathematics."
+keywords: "Software Engineering, Mathematics, Programming, Machine-Learning, Artificial Intelligence, Statistics, Probability, Puzzles"
 biography: "I m"
 colophon: "2017 by Martín Alcubierre Arenillas.<br>Content available under <a href='http://creativecommons.org/licenses/by-nc-sa/4.0/'>Creative Commons (BY-NC-SA)</a> unless otherwise noted.<br>This site is hosted at <a href='https://pages.github.com/'>Github Pages</a> and created with <a href='http://jekyllrb.com/'>Jekyll</a>."
 
@@ -13,7 +13,7 @@ twitter_username: alcubierre
 github_username: m-alcu
 linkedin_username: martinalcubierre
 facebook_username: m.alcubierre
-google-analytics: UA-11111-5
+google-analytics: UA-110961235-1
 
 simple_search: http://google.com/search
 markdown: kramdown
