--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Practising Maths on IA"
+title: "Practicing Maths on IA"
 author: "Martín Alcubierre"
 description: "This is a blog about software, some mathematics and python libraris use for Mathematics and Machine-Learning problems"
 keywords: "Software Engineering, Mathematics, Programming, Machine-Learning, Artificial Intelligence, Statistics, Probability, Puzzles"
